[add] SEO optimization + change animation speed feature

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,32 @@
 			content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<meta name="theme-color" content="#6441a4" />
+
+		<meta
+			name="description"
+			content="Play the classic 2048 puzzle game online for free. No registration, no ads. Challenge yourself to merge tiles and reach 2048!" />
+		<meta name="keywords" content="2048 game, free 2048, online puzzle game, no ads 2048, play 2048" />
+
+		<!-- Open Graph (for social media) -->
+		<meta property="og:title" content="2048 Game Online - Free Classic Puzzle" />
+		<meta
+			property="og:description"
+			content="Play 2048 online for free. No ads, no registration. Can you reach the 2048 tile?" />
+		<meta property="og:url" content="https://atimrish.github.io/2048/" />
+		<meta property="og:type" content="website" />
+
+		<!-- Twitter Card -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="2048 Game Online - Free Classic Puzzle" />
+		<meta
+			name="twitter:description"
+			content="Play 2048 online for free. No ads, no registration. Can you reach the 2048 tile?" />
+
 		<link rel="manifest" href="./public/manifest.json" />
 		<link rel="apple-touch-icon" sizes="180x180" href="./public/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="./public/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="./public/favicon-16x16.png" />
-		<title>2048</title>
+		<title>2048 Game Online - Play Free Classic Puzzle</title>
 	</head>
 	<body>
 		<div id="root"></div>
