--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,9 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="./public/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="./public/favicon-16x16.png" />
 		<title>2048 Game Online - Play Free Classic Puzzle</title>
+
+		<!-- Yandex Games SDK
+		<script src="https://sdk.games.s3.yandex.net/sdk.js"></script> -->
 	</head>
 	<body>
 		<div id="root"></div>
